--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -16,7 +16,9 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "graphql": "^15.8.0",
+    "@apollo/client": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
