--- a/Develop/package.json
+++ b/Develop/package.json
@@ -17,5 +17,14 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.7.2",
+    "apollo-server-express": "^2.25.3",
+    "react-router-dom": "^6.4.5",
+    "schema": "^0.2.1",
+    "v6": "^0.0.0",
+    "express": "^4.17.2",
+    "graphql": "^15.8.0"
   }
 }
