--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -2,23 +2,20 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "16.18.0"
-  },
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@apollo/client": "^3.5.8",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.4.1",
+    "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.1",
-    "graphql": "^15.8.0",
-    "@apollo/client": "^3.7.2"
+    "react-scripts": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
